cleanup demo App styling

--- a/src/demos/styles/stylesheet.scss
+++ b/src/demos/styles/stylesheet.scss
@@ -2,12 +2,5 @@
 
 body {
   font: 300 normal 14px 'Lato', sans-serif;
+  background-color: #F0D294;
 }
-
-// .page-header {
-//   margin-bottom: 0;
-// }
-//
-// pre {
-//   min-height: 40px;
-// }
